--- a/dana.html
+++ b/dana.html
@@ -39,31 +39,35 @@
         </div>
       </div>
     </section>
+
+
     <section >
       <div class="container">
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/pattern1.jpg" alt="">
+              <img src="img/roosterlg.jpg" alt="">
             </figure>
         </div>
         </div>
 
     </section>
 <!-- INTERESTS -->
+<!-- main info -->
     <section class="projectabout">
       <div class="container">
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
+      <h3>The Brief:</h3>
       <p>Dana approached me about creating a gallery for her illustrations that would work as a launching pad to her e-commerce profiles where she sold her artwork. I was very impressed by her work and jumped on the project right away. I put together a web brief that would capture the requirements of her site and after some email exchanges we came up with a vision for her gallery.
 </p>
     </div>
       <!-- right-column -->
       <div class="col">
-          <p><strong >Role:</strong></p>
+          <h3 >Role:</h3>
             <p>Web and UI Design</p>
-            <p><strong>Deliverables:</strong></p>
+            <h3>Deliverables:</h3>
             <p>Visual identity system, UI elements, Visual Mockup, Web Development (on-going)</p>
       </div>
     </div>
@@ -87,13 +91,12 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <strong>The challlenge and process: </strong>
+          <h3>The challlenge and process: </h3>
 <p>We determined that the target audience would be art enthusiasts who shop at places such as etsy and studio6 or collect things on Pinterest. As the priority, this meant providing the ability to quickly and easily sift through multiple works in one go. It was also very important to create a site that would elevate her work and not compete with it visually.</p>
-        </div>
+<p>We then worked together on a moodboard to capture her desired colors, aesthetic and visual feel. After some wireframe exploration, we landed on a grid style as the winning layout. From there I explored fonts and played with color hues, saturations and grays; as well as spacing and sizing of elements. I created a final mockup on Figma and now I’m exploring development platforms to host her site.
+</p>  </div>
         <!-- right-column -->
         <div class="col">
-<p>We then worked together on a moodboard to capture her desired colors, aesthetic and visual feel. After some wireframe exploration, we landed on a grid style as the winning layout. From there I explored fonts and played with color hues, saturations and grays; as well as spacing and sizing of elements. I created a final mockup on Figma and now I’m exploring development platforms to host her site.
-</p>
         </div>
         </div>
       </div>
