--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="mycontainer">
         <img src="img/rooster1a.jpg" alt="">
         <div class="overlay">
-            <a href="sinergia.html"><div class="text">Sinergia NGO</div></a>
+            <a href="sinergia.html"><div class="text">Sinergia Animal</div></a>
       </div>
     </div>
 
