--- a/sinergia.html
+++ b/sinergia.html
@@ -26,7 +26,7 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h1>Sinergia<br>NGO</h1>
+          <h1>Sinergia<br>Animal</h1>
           <p><a href="https://www.sinergiaanimal.org">Sinergia Animal</a> is an international animal protection organization working to end the worst practices of industrial animal agriculture.</p>
         </div>
         <!-- right-column -->
@@ -43,7 +43,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/rooster1a.jpg" alt="">
+              <img src="img/roosterlg.jpg" alt="">
             </figure>
         </div>
         </div>
@@ -55,7 +55,9 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-        <p>I discovered them on 80000hours.org which reports on organizations that are helping to solve the most pressing global issues. I looked at their current site and immediately knew that I could provide some insight on their UX and visual design. I put together an unsolicited home page re-design and emailed their Communications director who was happy with my work and she agreed to collaborate with me on a project starting August 2020.</p>
+      <h3>The Brief:</h3>
+      <p>I discovered this NGO through 80000hours.org a research group which features companies that are working to solve the most pressing global issues. After surveying Sinergia’s site I knew that I could provide some helpful insight on their UX and visual design. I decided to put together an unsolicited home page mockup and then emailed their Communications director who ended up liking my work. We will collaborate on a design project starting in August 2020.
+</p>
     </div>
       <!-- right-column -->
       <div class="col">
@@ -85,10 +87,10 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h3>The challlenge and process </h3>
-            <p>The challenge was not knowing Sinergia’s business priorities. I looked at their mission statement and the read through their content which informed my overall design direction. I also went and looked at similar organizations, researched NPO/NGO trends and reviewed other sites.
-</p> <p>When you land on the home page, you can see that there are many items to click through and navigate from. I referred to some best UX practices to reduce the number of navigation items to ease complexity, created CTA buttons for their donation and volunteer pages and visually emphasized the human touch and the people behind this movement. </p>
-        </div>
+          <h3>The Challlenge</h3>
+<p>The challenge was not knowing Sinergia’s business priorities. But after looking through their mission statement and values, I got a sense of what they seem to care about which informed my overall design direction.</p>
+<p>When you land on the current home page, you’ll see that there are many navigation items to pick from. I thought about user-centered design and guiding principles, so I reduced the number of menu items to ease navigation, created CTA buttons for important features, such as the donation and volunteer pages, and visually emphasized the human touch behind their efforts. </p>
+</div>
         <!-- right-column -->
         <div class="col">
             <figure>
