--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
           <!-- left-column -->
         <div class="col right-alignment">
           <h1>Let’s
-            <br>explore
+            <br>work
             <br>together</h1>
-            <p>Hi there and welcome! My name is Andres and I’m a visual designer with eight years of experience making digital products and services. I’ve a background working with organizations in the communication, media, and software development fields, from scrappy startups, non-profits, to established large companies. Nowadays I’m passionate about exploring visual styles and am a budding UI animator, web and brand designer. I’m committed to connecting my clients with their desired aesthetic and develop their brand.</p>
+            <p>Hi there, so glad you’re here! My name is Andres, a visual designer with eight years of experience making digital products and services. I have a background working with organizations in the communication, media, and software development fields, from scrappy startups, non-profits, to established large companies. Nowadays I’m passionate about exploring visual styles and am a budding UI animator, web and brand designer. </p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -54,7 +54,7 @@
       <!-- right-column -->
       <div class="col">
           <h2 >Interests</h2>
-          <p>I have strong passion for the arts but I also care about education, altruism, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I’m always teaching myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. I’ve been creating content in some shape or form since grade school but recently reignited my passion for digital design. I also have a love for dance and have performed around the Bay Area. You can find me grooving and creating choreographies to cuban salsa, dancehall, urban/funk or afro beats :)</p>
+          <p>I have strong passion for the arts, dance and fitness but I also care about social justice, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I have always taught myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. I’ve been creating content in some shape or form since grade school, but recently reignited my passion for digital design. I also have a love for dance! You can find me grooving and creating choreographies to cuban salsa, dancehall, urban/funk or afro beats :)</p>
       </div>
     </div>
 </div>
@@ -66,8 +66,9 @@
               <!-- left-column -->
             <div class="col right-alignment">
               <h2>Top Skills & Services</h2>
-              <p>I’m skilled at identifying visual inconsistencies, working out solutions with fellow designers, and communicating a unified direction to stakeholders. Overtime I’ve picked up many tools and sharpened my skills with a few that I actively use, but in general my services fall in three categories: UI animation, Web Design, and Photo retouch and editing</p>
-              <p>I’m currently available to take on freelance work and always willing to explore contract or long-term positions with the right team. Download resume.</p>
+              <p>I have worked with all kinds of clients, teams, and personalities over the years which has taught me how to effectively work through problems and to find solutions with fellow team members. I know how get things done, communicate a unified vision to stakeholders, and ship a product out. Over my career I have also picked up many tools, but have sharpened my skills with a few tools that help me provide three general services: UI animation, Web Design, and Photo retouch and editing
+</p>
+              <p>I’m currently available to take on freelance work and always willing to explore contract or long-term positions with the right team. Download my resume or email me below.</p>
             </div>
             <!-- right-column -->
             <div class="col">
