--- a/argos.html
+++ b/argos.html
@@ -56,14 +56,14 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-      <strong>The Brief</strong>
+      <h3>The Brief</h3>
       <p>The Argos Design studio founder, Cathy Dipietro, wanted to re-design her website and develop a brand identity that could be used on other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work.</p>
     </div>
       <!-- right-column -->
       <div class="col">
-          <strong>Role:</strong>
+          <h3>Role:</h3>
             <p>Web and UI Design</p>
-            <strong>Deliverables:</strong>
+            <h3>Deliverables:</h3>
             <p>Visual Style Guide, Brand Strategy, Visual Mockup, and Web Development (on-going)</p>
       </div>
     </div>
@@ -87,7 +87,7 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <strong>The Process </strong>
+          <h3>The Process </h3>
           <p>Building on top of an initial logo designed by another agency, I developed a broader branding identity for Argos, creating a new color palette and design guidelines to help her communicate a unified voice on other digital channels. With the brief in hand, I created a sitemap and some initial wireframes to resemble our new vision. Once she approved, I went on to create a high fidelity visual mockup.
 </p>
 </div>
@@ -122,8 +122,8 @@
           </div>
         <!-- right-column -->
         <div class="col">
-          <strong>Color and Type</strong>
-          <p>The original mood board had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel.</p>
+          <h3>Color and Type</h3>
+          <p>The original moodboard had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel.</p>
 
         </div>
       </div>
