--- a/argos.html
+++ b/argos.html
@@ -44,7 +44,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/table1a.jpg" alt="">
+              <img src="img/herotable.jpg" alt="">
             </figure>
         </div>
         </div>
