--- a/dana.html
+++ b/dana.html
@@ -46,7 +46,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/roosterlg.jpg" alt="">
+              <img src="img/heropattern.jpg" alt="">
             </figure>
         </div>
         </div>
