--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="fixed-nav-bar">
         <div class="logo">
-          <a href="home.html"><p>ANDRES</p></a>
+          <a href="index.html"><p>ANDRES</p></a>
         </div>
         <div class="about" >
           <a href="about.html"><p>ABOUT</p></a>
