css and html updates

--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col right-alignment">
-          <h1>Let’s
-            <br>work
-            <br>together</h1>
-            <p>Hi there, so glad you’re here! My name is Andres, a visual designer with eight years of experience making digital products and services. I have a background working with organizations in the communication, media, and software development fields, from scrappy startups, non-profits, to established large companies. Nowadays I’m passionate about exploring visual styles and am a budding UI animator, web and brand designer. </p>
+          <h1>What
+            <br>makes
+            <br>me tick</h1>
+            <p>Hi there, so glad you’re here! My name is Andres, I'm a Visual Designer with eight years of experience making digital products and services. I have worked with organizations in the communication, media, and software development fields ranging scrappy startups, non-profits, to established large companies. Nowadays I’m passionate about exploring visual styles and am a budding UI animator, web and brand designer. </p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -66,9 +66,11 @@
               <!-- left-column -->
             <div class="col right-alignment">
               <h2>Top Skills & Services</h2>
-              <p>I have worked with all kinds of clients, teams, and personalities over the years which has taught me how to effectively work through problems and to find solutions with fellow team members. I know how get things done, communicate a unified vision to stakeholders, and ship a product out. Over my career I have also picked up many tools, but have sharpened my skills with a few tools that help me provide three general services: UI animation, Web Design, and Photo retouch and editing
+              <p>I have worked with all kinds of clients, teams, and personalities over the years which has taught me how to effectively work through problems and to find solutions with fellow team members. I know how get things done, communicate a unified vision to stakeholders, and ship a product out. Over my career I have also picked up many tools, but have sharpened my skills with a few tools that help me provide three general services:
+                <a href="https://codepen.io/pen"target="_blank">UI animation</a>, <a href="https://dribbble.com/andresvdes"target="_blank">Web Design</a>, and <a href="https://lightroom.adobe.com/gallery/402f3117da2b4366921fe10c36d0a256"target="_blank">Photo retouch & editing.</a>
 </p>
-              <p>I’m currently available to take on freelance work and always willing to explore contract or long-term positions with the right team. Download my resume or email me below.</p>
+              <p>I’m currently available to take on freelance work and always willing to explore
+                contract or long-term positions with the right team. <a href="img/test.pdf"target="_blank">Download my resume</a> or contact me below.</p>
             </div>
             <!-- right-column -->
             <div class="col">
