--- a/argos.html
+++ b/argos.html
@@ -57,7 +57,7 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief</h3>
-      <p>The Argos Design studio founder, Cathy Dipietro, wanted to re-design her website and develop a brand identity that could be used on other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work.</p>
+      <p>The Argos Design studio founder, Cathy Depietro, wanted to re-design her website and develop a brand identity that could be used on other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work.</p>
     </div>
       <!-- right-column -->
       <div class="col">
@@ -94,7 +94,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="" alt="">
+              <img src="img/argoslogo.svg" alt="">
             </figure>
         </div>
         </div>
@@ -134,7 +134,7 @@
           <!-- left-column -->
           <div class="col">
               <figure>
-                <img src="img/argos1.jpg" alt=""></figure>
+                <img src="img/work.jpg" alt=""></figure>
           </div>
         <!-- right-column -->
 
