--- a/dana.html
+++ b/dana.html
@@ -28,7 +28,9 @@
           <!-- left-column -->
         <div class="col">
           <h1>Dana <br> Rubin</h1>
-          <p>Dana Rubin is an independent Bay Area illustrator. Her style can be described as joyful, whimsical, and free-form - inspired by nature and human expression.  All artwork proceeds go to various nonprofits and charities.</p>
+          <p>Dana Rubin is an independent Bay Area illustrator. Her style can be
+            described as joyful, whimsical, and free-form - inspired by nature and human
+            expression.  All artwork proceeds go to various nonprofits and charities.</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -60,7 +62,12 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief:</h3>
-      <p>Dana approached me about creating a gallery for her illustrations that would work as a launching pad to her e-commerce profiles where she sold her artwork. I was very impressed by her work and jumped on the project right away. I put together a web brief that would capture the requirements of her site and after some email exchanges we came up with a vision for her gallery.
+      <p>Dana approached me about creating a gallery for her illustrations
+        that would work as a launching pad to her e-commerce profiles where
+        she sold her artwork. I was very impressed by her work and jumped on
+        the project right away. I put together a web brief that would capture
+        the requirements of her site and after some email exchanges we came up
+        with a vision for her gallery.
 </p>
     </div>
       <!-- right-column -->
@@ -91,9 +98,18 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h3>The challlenge and process: </h3>
-<p>We determined that the target audience would be art enthusiasts who shop at places such as etsy and studio6 or collect things on Pinterest. As the priority, this meant providing the ability to quickly and easily sift through multiple works in one go. It was also very important to create a site that would elevate her work and not compete with it visually.</p>
-<p>We then worked together on a moodboard to capture her desired colors, aesthetic and visual feel. After some wireframe exploration, we landed on a grid style as the winning layout. From there I explored fonts and played with color hues, saturations and grays; as well as spacing and sizing of elements. I created a final mockup on Figma and now I’m exploring development platforms to host her site.
+          <h3>The Challlenge and Process: </h3>
+<p>We determined that the target audience would be art enthusiasts who shop at
+  places such as etsy and studio6 or collect things on Pinterest. With this in mind,
+  I wanted to provide the ability to quickly and easily sift through multiple works
+  in one go. It was also very important to create a site that would elevate her work
+  and not compete with it visually.</p>
+<p>We then worked together on a moodboard to capture her desired colors, aesthetic
+  and visual feel. After some wireframe exploration, we landed on a grid style as
+  the winning layout. From there I explored fonts and played with color hues,
+  saturations and grays; as well as spacing and sizing of elements. I created a
+  final mockup with Figma and now I’m exploring web platforms that will enable her to
+  maintain her site and update content easily.
 </p>  </div>
         <!-- right-column -->
         <div class="col">
