--- a/sinergia.html
+++ b/sinergia.html
@@ -27,7 +27,7 @@
           <!-- left-column -->
         <div class="col">
           <h1>Sinergia<br>Animal</h1>
-          <p><a href="https://www.sinergiaanimal.org">Sinergia Animal</a> is an international animal protection organization working to end the worst practices of industrial animal agriculture.</p>
+          <p><a href="https://www.sinergiaanimal.org" target="_blank">Sinergia Animal</a> is an international animal protection organization working to end the worst practices of industrial animal agriculture.</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -56,7 +56,12 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief:</h3>
-      <p>I discovered this NGO through 80000hours.org a research group which features companies that are working to solve the most pressing global issues. After surveying Sinergia’s site I knew that I could provide some helpful insight on their UX and visual design. I decided to put together an unsolicited home page mockup and then emailed their Communications director who ended up liking my work. We will collaborate on a design project starting in August 2020.
+      <p>I discovered this NGO through 80000hours.org, a research group which features companies that are
+        working to solve the most pressing global issues. After assessing Sinergia’s site I
+        found some opportunities where I could provide some helpful insight on their UX and UI design.
+        So I did, by putting together an new home design (unsolicited) and then emailed my ideas to the
+        Communications Director who ended up liking my work. Now we're set to collaborate on a design project
+        starting in August 2020 (super excited!).
 </p>
     </div>
       <!-- right-column -->
@@ -88,8 +93,14 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Challlenge</h3>
-<p>The challenge was not knowing Sinergia’s business priorities. But after looking through their mission statement and values, I got a sense of what they seem to care about which informed my overall design direction.</p>
-<p>When you land on the current home page, you’ll see that there are many navigation items to pick from. I thought about user-centered design and guiding principles, so I reduced the number of menu items to ease navigation, created CTA buttons for important features, such as the donation and volunteer pages, and visually emphasized the human touch behind their efforts. </p>
+<p>The challenge was not knowing Sinergia’s business priorities. So I got familiar
+  with their work by looking through their mission statement and values, then I got a
+  good sense of what seemed most important - taking action.</p>
+<p>When you land on the current home page, you’ll see that there are a few too many
+  navigation items to pick from. I thought about user-centered design and guiding
+  principles, so I reduced the number of menu items to ease navigation overload,
+  created CTA buttons for important features, such as the donation and
+  volunteer pages, and visually emphasized the human touch behind their efforts. </p>
 </div>
         <!-- right-column -->
         <div class="col">
