added white boxes and fixed hero

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 <h1>andresvdes@<br>outlook.com</h1></a>
               </div>
               <div class="foo2">
-                <p>Thank you for stopping by! Like what you see? Then please let us connect.</p>
+                <p>Thank you for stopping by and if you like my work then let's connect!</p>
               </div>
               <div class="foo3">
 
