--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
     </nav>
     <header>
-          <div>  </div>
+          <div class="vertical"><p>EXPLORE WORKS</p></div>
       <div class="container-fluid">
         <div class=""><h1><span></span><br>I'm Andres a<br>Visual Designer</h1> </div>
-<img src="img/gradient1a.png" alt=""> <p>PORTFOLIO WORKS</p>
+<img src="img/gradient1a.png" alt=""> <div class="about"><p>PORTFOLIO WORKS</p></div>
 
     </div>
           </header>
@@ -32,21 +32,21 @@
       <div class="mycontainer">
         <img src="img/Pattern1a.jpg" alt="">
         <div class="overlay">
-    <a href="dana.html"><div class="text">Dana Rubin</div></a>
+    <a href="dana.html"><div class="text">Illustrations by Dana <p>UX/UI, Identity</p> </div></a>
   </div>
       </div>
 
       <div class="mycontainer">
             <img src="img/table1a.jpg" alt="">
             <div class="overlay">
-          <a href="argos.html"><div class="text">Argos Design</div></a>
+          <a href="argos.html"><div class="text">Argos Design <p>UX/UI, Branding</p></div></a>
       </div>
     </div>
 
       <div class="mycontainer">
         <img src="img/rooster1a.jpg" alt="">
         <div class="overlay">
-            <a href="sinergia.html"><div class="text">Sinergia Animal</div></a>
+            <a href="sinergia.html"><div class="text">Sinergia Animal <p>UX/UI Design</p></div></a>
       </div>
     </div>
 
@@ -57,7 +57,7 @@
             <h1>andresvdes@<br>outlook.com</h1></a>
           </div>
           <div class="foo2">
-            <p>Thank you for stopping by! Like what you see? Then please let us connect.</p>
+            <p>Thank you for stopping by and if you like my work then let's connect!</p>
           </div>
           <div class="foo3">
 
