--- a/sinergia.html
+++ b/sinergia.html
@@ -52,12 +52,7 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief:</h3>
-      <p>I discovered this NGO through 80000hours.org, a research group which features companies that are
-        working to solve the most pressing global issues. After assessing Sinergia’s site I
-        found some opportunities where I could provide some helpful insight on their UX and UI design.
-        So I did, by putting together an new home design (unsolicited) and then emailed my ideas to the
-        Communications Director who ended up liking my work. Now we're set to collaborate on a design project
-        starting in August 2020 (super excited!).
+      <p>I discovered this NGO through 80000hours.org, a research group which features companies that are working to solve the most pressing global issues. After assessing Sinergia’s site I found some opportunities where I could provide some helpful insight on their UX and UI design. And I did, by putting together a new home design (unsolicited) and then emailed my ideas to the Communications Director who ended up liking my work. Now we're set to collaborate on a design project starting in August 2020 (super excited!).
 </p>
     </div>
       <!-- right-column -->
@@ -88,15 +83,9 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h3>The Challlenge</h3>
-<p>The challenge was not knowing Sinergia’s business priorities. So I got familiar
-  with their work by looking through their mission statement and values, then I got a
-  good sense of what seemed most important - taking action.</p>
-<p>When you land on the current home page, you’ll see that there are a few too many
-  navigation items to pick from. I thought about user-centered design and guiding
-  principles, so I reduced the number of menu items to ease navigation overload,
-  created CTA buttons for important features, such as the donation and
-  volunteer pages, and visually emphasized the human touch behind their efforts. </p>
+          <h3>The Challenge</h3>
+<p>The challenge was not knowing Sinergia’s business priorities. So, I got familiar with their work by looking through their mission statement and values, then I got a good sense of what seemed most important - taking action. </p>
+<p>When you land on the current home page, you’ll see that there are a few too many navigation items to pick from. I thought about user-centered design and guiding principles, so I reduced the number of menu items to ease navigation overload, created CTA buttons for important features, such as the donation and volunteer pages, and visually emphasized the human touch behind their efforts. </p>
 </div>
         <!-- right-column -->
         <div class="col">
