--- a/argos.html
+++ b/argos.html
@@ -53,7 +53,7 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief</h3>
-      <p>The Argos Design studio founder, Cathy Depietro, wanted to re-design her website and develop a brand identity that could be used on other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work.</p>
+<p>The Argos Design studio founder, Cathy Depietro, wanted to re-design her website and develop a brand identity that could be easily translate to other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work. </p>
     </div>
       <!-- right-column -->
       <div class="col">
@@ -84,14 +84,11 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Process </h3>
-          <p>Building on top of an initial logo designed by another agency, I developed a broader branding identity for Argos, creating a new color palette and design guidelines to help her communicate a unified voice on other digital channels. With the brief in hand, I created a sitemap and some initial wireframes to resemble our new vision. Once she approved, I went on to create a high fidelity visual mockup.
-</p>
+<p>Building on top of an initial logo designed by another agency, I developed a broader branding identity for Argos, creating a new color palette and design guidelines to help her communicate a unified voice on any medium. With the brief in hand, I created a sitemap and some initial wireframes to resemble our new vision. Once she approved, I went on to create a high-fidelity visual mockup. </p>
 </div>
         <!-- right-column -->
         <div class="col">
-            <figure>
-              <img src="img/argoslogo.svg" alt="">
-            </figure>
+
         </div>
         </div>
       </div>
@@ -114,13 +111,12 @@
         <div class="row myrow">
           <!-- left-column -->
           <div class="col">
-                <img src="img/argosaboutshot.jpg" alt="">
+                <img src="img/typecolor.jpg.png" alt="">
           </div>
         <!-- right-column -->
         <div class="col">
           <h3>Color and Type</h3>
-          <p>The original moodboard had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel.</p>
-
+<p>The original mood board had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel. </p>
         </div>
       </div>
     </section>
@@ -130,7 +126,7 @@
           <!-- left-column -->
           <div class="col">
               <figure>
-                <img src="img/work.jpg" alt=""></figure>
+                <img src="img/typecolor.jpg" alt=""></figure>
           </div>
         <!-- right-column -->
 
@@ -145,7 +141,7 @@
           </div>
         <!-- right-column -->
         <div class="col">
-          <p>Overal the site’s design has come together pretty well and I have enjoyed helping the Argos Design brand grow. As my first project of 2020 I'm excited for the future opportunities this project will bring!</p>
+<p>Overall, the site’s design has come together pretty well and I have enjoyed helping the Argos Design brand grow. As my first project of 2020 I'm excited for the future opportunities this project will bring! </p>
         </div>
       </div>
     </section>
