--- a/dana.html
+++ b/dana.html
@@ -58,12 +58,10 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief:</h3>
-      <p>Dana approached me about creating a gallery for her illustrations
-        that would work as a launching pad to her e-commerce profiles where
-        she sold her artwork. I was very impressed by her work and jumped on
-        the project right away. I put together a web brief that would capture
-        the requirements of her site and after some email exchanges we came up
-        with a vision for her gallery.
+      <p>Dana approached me about creating a gallery for her illustrations that would work as a launching pad
+        to her e-commerce profiles where she sold her artwork. I was very impressed by her work and jumped on
+        the project right away. I put together a web brief that would capture the requirements of her site and
+        after some email exchanges we came up with a vision for her gallery.
 </p>
     </div>
       <!-- right-column -->
@@ -95,17 +93,8 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Challlenge and Process: </h3>
-<p>We determined that the target audience would be art enthusiasts who shop at
-  places such as etsy and studio6 or collect things on Pinterest. With this in mind,
-  I wanted to provide the ability to quickly and easily sift through multiple works
-  in one go. It was also very important to create a site that would elevate her work
-  and not compete with it visually.</p>
-<p>We then worked together on a moodboard to capture her desired colors, aesthetic
-  and visual feel. After some wireframe exploration, we landed on a grid style as
-  the winning layout. From there I explored fonts and played with color hues,
-  saturations and grays; as well as spacing and sizing of elements. I created a
-  final mockup with Figma and now I’m exploring web platforms that will enable her to
-  maintain her site and update content easily.
+<p>We determined that the target audience would be art enthusiasts who shop at places such as Etsy and Studio6 or collect things on Pinterest. With this in mind, I wanted to provide users the ability to quickly and easily sift through multiple art works in one go. It was also very important to create a site that would elevate her work and not compete with it visually. </p>
+<p>We then worked together on a mood board to capture her desired colors, aesthetic and visual feel. After some wireframe exploration, we landed on a grid style as the winning layout. From there I explored fonts and played with color hues, saturations and grays; as well as spacing and sizing of elements. I created a final mockup with Figma and now I’m exploring web platforms that will enable her to maintain her site and update content easily. 
 </p>  </div>
         <!-- right-column -->
         <div class="col">
