--- a/argos.html
+++ b/argos.html
@@ -137,6 +137,18 @@
         <div class="row myrow">
           <!-- left-column -->
           <div class="col">
+              <figure>
+                <img src="img/branding.jpg" alt=""></figure>
+          </div>
+        <!-- right-column -->
+
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
                 <img src="" alt="">
           </div>
         <!-- right-column -->
