resume and images

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 <a href="https://codepen.io/pen"target="_blank">UI animation</a>, <a href="https://dribbble.com/andresvdes"target="_blank">Web Design</a>, and <a href="https://lightroom.adobe.com/gallery/402f3117da2b4366921fe10c36d0a256"target="_blank">Photo retouch & editing.</a>
 </p>
               <p>I’m currently available to take on freelance work and always willing to explore
-                contract or long-term positions with the right team. <a href="img/test.pdf"target="_blank">Download my resume</a> or contact me below.</p>
+                contract or long-term positions with the right team. <a href="img/andres_saavedra.pdf"target="_blank">Download my resume</a> or contact me below.</p>
             </div>
             <!-- right-column -->
             <div class="col">
