--- a/argos.html
+++ b/argos.html
@@ -27,8 +27,7 @@
           <!-- left-column -->
         <div class="col">
           <h1>Argos<br> Design</h1>
-          <p>Argos Design is a boutique furniture manufacturing and design studio crafting custom pieces for individual and commercial clients across the U.S.
-</p>
+
         </div>
         <!-- right-column -->
         <div class="col">
@@ -37,6 +36,7 @@
         </div>
       </div>
     </section>
+    
     <section >
       <div class="container">
         <!-- right-column -->
@@ -53,8 +53,9 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief</h3>
-<p>The Argos Design studio founder, Cathy Depietro, wanted to re-design her website and develop a brand identity that could be easily translate to other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work. </p>
-    </div>
+      <p>Argos Design is a boutique furniture manufacturing and design studio crafting custom pieces for individual and commercial clients across the U.S.
+<p>The project was started when Cathy Depietro, founder of Argos, realized she needed to leverage her website design to make it as easy as possible for new clients to contact her and request a quote for work. She also wanted to update the look and feel of her brand which would also easily translate to other channels. The new look for the site was to be simple, modern, and confident, a reflection of Cathy’s personal style, and present a reliable and sophisticated experience for her users.
+</p>    </div>
       <!-- right-column -->
       <div class="col">
           <h3>Role:</h3>
@@ -84,7 +85,9 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Process </h3>
-<p>Building on top of an initial logo designed by another agency, I developed a broader branding identity for Argos, creating a new color palette and design guidelines to help her communicate a unified voice on any medium. With the brief in hand, I created a sitemap and some initial wireframes to resemble our new vision. Once she approved, I went on to create a high-fidelity visual mockup. </p>
+<p>Cathy had cultivated a small group of loyal customers, so she understood what her clients looked liked. This helped me build general personas which included: business owners, executives, and office coordinators. With this in mind I put together simple wireframes to take the user from landing on a page to requesting a quote.
+</p><p>Cathy did not have a fixed deadline which helped us explore the brand deeper by looking at current industry trends, website styles, and exploring a mood board. She had also worked with an agency which created her logo and which she wanted to keep and work into the new website. I built three versions using simple wireframes, reviewed with her and then selected the winner.
+</p>
 </div>
         <!-- right-column -->
         <div class="col">
@@ -94,6 +97,31 @@
       </div>
     </section>
 
+    <section >
+      <div class="container">
+        <!-- long-column -->
+        <div class="col">
+            <figure>
+              <img src="img/wires1.png" alt="">
+            </figure>
+        </div>
+        </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+        <div class="col">
+<p>  Then I asked for any imagery and copy she had and put together a visual mockup. After some more feedback through online video chats and email reviews, I tweaked some colors and type, then generated a high fidelity mockup.
+</p>
+</div>
+        <!-- right-column -->
+        <div class="col">
+
+        </div>
+        </div>
+      </div>
+    </section>
     <section >
       <div class="container">
         <!-- long-column -->
@@ -153,7 +181,9 @@
           </div>
         <!-- right-column -->
         <div class="col">
-<p>Overall, the site’s design has come together pretty well and I have enjoyed helping the Argos Design brand grow. As my first project of 2020 I'm excited for the future opportunities this project will bring! </p>
+          <h3>Outcome</h3>
+<p>The final design was approved by Cathy and she is excited to build out the new experience and launch it soon. I’m currently looking at platforms to host and maintain her site going forward.
+ As my first project of 2020 I'm excited for the future opportunities this project will bring! </p>
         </div>
       </div>
     </section>
